Fix on showing the page-left-panel with slide-over option on mobile in studio mode.

--- a/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
+++ b/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
@@ -11,7 +11,7 @@
   z-index: 1000;
   &.slide-over {
     left: -100%;
-    z-index: 100000;
+    z-index: 1000;
 
     &.visible {
       left: 0;
